# wrtr

./: .gitignore  README.md  clipboard.py  editor.py  favorite_manager.py  file_browser.py  global_keys.py  layout_manager.py  logger.py  main.py  markdown_preview.py  modal_base.py  palette_dismiss_modal.py  palette_modal.py  pyproject.toml  recent_manager.py  requirements.txt  setup.py  spellcheck.py  startup_profiler.py  status_bar.py  styles.css  styles.tcss  theme.py  workspace.py
.github/workflows/: build-release.yml  build.yml
.roo/rules/: general.md
docs/: 1. Welcome.md  2. Key_Binding_Cheat_Sheet.md  Key_Binding_Cheat_Sheet.md  Markdown_Cheat_Sheet.md
editor/: __init__.py  autosave.py  keybindings.py  spellcheck.py  view.py
example code/: editor.txt
interfaces/: spellcheck_service.py  theme_service.py  workspace_service.py
screens/: confirm_screen.py  home_screen.py  recent_files_modal.py  recent_files_screen.py  rename_screen.py  save_as_screen.py
services/: recent_files_service.py  spellcheck.py  workspace_service.py
src/wrtr/: __init__.py  favorite_manager.py  global_keys.py  main.py  markdown_preview.py  search.py  startup_profiler.py  status_bar.py  theme.py
src/wrtr/editor/: __init__.py  buffer.py  editor_search.py  keybindings.py  slash_commands.py  slash_detection.py  (+3 more)
tests/: test_spellcheck.py
wrtr/: .gitignore  LICENSE  editor.py  file_browser.py  global_keys.py  recent_manager.py  requirements.txt  search.py  status_bar.py  workspace.py
wrtr/docs/: Welcome.md
wrtr/example code/: main.txt
wrtr/screens/: confirm_screen.py
(+28 files in other folders)
